; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_get_current_target.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_get_current_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lease_state = common dso_local global i64 0, align 8
@lst_off = common dso_local global i64 0, align 8
@rpc_main_target = common dso_local global i32 0, align 4
@lst_on = common dso_local global i64 0, align 8
@rpc_lease_target = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_current_target() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @lease_state, align 8
  %3 = load i64, i64* @lst_off, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @rpc_main_target, align 4
  store i32 %6, i32* %1, align 4
  br label %14

7:                                                ; preds = %0
  %8 = load i64, i64* @lease_state, align 8
  %9 = load i64, i64* @lst_on, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @rpc_lease_target, align 4
  store i32 %12, i32* %1, align 4
  br label %14

13:                                               ; preds = %7
  store i32 -1, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %11, %5
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
